appId: io.ente.entegram.debug
---
- launchApp:
    clearState: true
- assertVisible: "Create account"
- assertVisible: "Sign in"
- tapOn: "Sign in"
- assertVisible: "you@example.com"
- tapOn: "you@example.com"
- eraseText
- inputText: "${ACCOUNT_EMAIL}"
- tapOn: "Continue"
- extendedWaitUntil:
    visible: "Enter your password"
    timeout: 20000
- tapOn: "Password"
- eraseText
- inputText: "${ACCOUNT_PASSWORD}"
- tapOn: "Sign in"
- extendedWaitUntil:
    visible: "Settings"
    timeout: 30000
- assertVisible: "Discover"
